chore: remove preview